--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,6 @@
 .titulo-secao {
     font: bold var(--h2-tamanho) var(--h2-fonte), serif;
     color: var(--h2-escuro);
-    position: relative;
     text-align: center;
     margin: var(--h2-tamanho) 0;
 }
