--- a/css/servicos-e-produtos.css
+++ b/css/servicos-e-produtos.css
@@ -2,7 +2,6 @@
 .container {
   margin: 0 auto;
   padding: 0px;
-  position: relative;
 }
 
 .intro {
